fix: SignedMessages empty label on mobile

--- a/src/components/Wallet/Transactions/SignedMessages/SignedMessages.module.scss
+++ b/src/components/Wallet/Transactions/SignedMessages/SignedMessages.module.scss
@@ -9,6 +9,11 @@
     border: 1px solid $c-fiord;
     border-radius: $border-radius;
 
+    .emptyLabel {
+        margin: 0;
+        font-size: .875rem;
+    }
+
     .header {
         display: flex;
         justify-content: space-between;
